Added anchor tags for contact page

--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,12 @@ body {
 
 a:link {
   text-decoration: inherit;
-
+  color: inherit;
 }
 
 a:visited {
   text-decoration: inherit;
-
+  color: inherit;
 }
 
 h1 {
